--- a/public/sass/base/_type.scss
+++ b/public/sass/base/_type.scss
@@ -73,7 +73,9 @@ a:focus {
 	color: $primary-color;
 	text-decoration: none;
 }
-
+a:hover .custom-sharing{
+	fill: $primary-color;
+}
 // 1.3) Headings
 
 .heading {
