--- a/public/sass/components/_social-icons.scss
+++ b/public/sass/components/_social-icons.scss
@@ -37,34 +37,34 @@
 // 2. Live Social Icons
 
 	&.social-facebook {
-		background-color: #3b5a9a;
+		background-color: #e30613;
 
 		&:hover {
-			border-color: rgba(59,90,154, .85);
+			border-color: #e30613;
 		}
 	}
 
 	&.social-twitter {
-		background-color: #1aa9e1;
+		background-color: #e30613;
 
 		&:hover {
-			border-color: rgba(26,169,225, .85);
+			border-color: #e30613;
 		}
 	}
 
 	&.social-instagram {
-		background-color: #7c4a3a;
+		background-color: #e30613;
 
 		&:hover {
-			border-color: rgba(124,74,58, .85);
+			border-color: #e30613;
 		}
 	}
 
 	&.social-linkedin {
-		background-color: #0073b2;
+		background-color: #e30613;
 
 		&:hover {
-			border-color: rgba(0,115,178, .85);
+			border-color: #e30613;
 		}
 	}
 
