--- a/public/sass/demo/_demo-base.scss
+++ b/public/sass/demo/_demo-base.scss
@@ -1091,7 +1091,9 @@
     }
 }
 .custom-helpline{
-    // margin-top: 160px;
+  display: flex;
+  align-self: self-end;
+  flex-direction: column;
 }
 // 3. Component
 // 3.1) Base
@@ -1155,7 +1157,28 @@ body {
 .menu > li > ul:before {
     left: 26%;
 }
+.recommendmob{
+    display: none
+}
 
+// apple products
+.custom-apple-title{
+    color: white ;
+    background-color: black;
+    margin-bottom: 20px;
+    padding: 20px;
+    font-size: 16px;
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.apple-cointainer{
+   margin: 10px; 
+}
+.custom-mobOnlyapple{
+    display: none;
+}
 // Responsive
 @media (min-width: 992px) {
 	.sidebar-home {
@@ -1395,10 +1418,31 @@ body {
 }
 
 @media (max-width: 768px) {
+    .recommendmob{
+        display: flex;
+        font-weight: 600;
+    }
+    .custom-helpline{
+		display: none;
+	}
+    .custom-mobOnlyapple{
+        display: block;
+    }
+    .custom-topbrand-img{
+        padding-bottom: 65px;
+    }
     .sticky-header .cart-dropdown {
         margin-bottom: 4px;
     }
+.custom-product-resp{
+    display: none !important
 
+}
+    .deal-products-section{
+        .deal-section-head{
+            display: none;
+        }
+    }
     .widget-newsletter-info {
         margin-right: 0;
     }
