--- a/public/sass/base/header/_dropdowns.scss
+++ b/public/sass/base/header/_dropdowns.scss
@@ -106,11 +106,20 @@
 	
 		.btn-close {
 			position: absolute;
-			left: -4.2rem;
-			top: .7rem;
+			// left: -4.2rem;
+			right: 23px;
+			// top: .7rem;
 			font-size: 3.3rem;
 			color: #fff;
 			font-weight: 300;
+			background-color: black;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px
 		}
 	}
 }
