--- a/public/sass/demo/_demo-custom.scss
+++ b/public/sass/demo/_demo-custom.scss
@@ -178,8 +178,9 @@ span.toggle {
         .nav-link {
             padding: 1.1rem 0 1.4rem;
             margin-right: 0;
-            font-size: 1.3rem;
+            font-size: 1.8rem;
             font-family: $second-font-family;
+            color: black;
         }
     }
 } 
