--- a/public/sass/pages/_category.scss
+++ b/public/sass/pages/_category.scss
@@ -289,7 +289,7 @@ span.toggle {
 		position: relative;
 		min-width: 32px;
 		text-align: center;
-		margin: 3px 6px 3px 0;
+		// margin: 3px 6px 3px 0;
 		padding: 4px 8px;
 		transition: all .3s;
 		border: 1px solid #e9e9e9;
