--- a/public/sass/base/header/_menu.scss
+++ b/public/sass/base/header/_menu.scss
@@ -626,8 +626,13 @@ background-color: rgba(245, 245, 245, 1);
 .custom__menu {
 	display: flex;
 	justify-content: center;
+	overflow-x: scroll;
+	color: black;
 	// background-color:rgba(240, 240, 240, 1) ;
 	cursor: pointer;
+	margin-bottom: 0;
+	padding-left: 0;
+	padding-bottom: 0 !important;
 	&__item {
 		display: flex;
 		gap: 4px;
@@ -652,10 +657,14 @@ background-color: rgba(245, 245, 245, 1);
 		&-label{
 			font-size: 12px;
 			font-weight: 500;
+			margin-bottom: 0;
 		}
 	}
 
 
+}
+::-webkit-scrollbar {
+	width: 0; /* Set the width to 0 to hide scrollbar */
 }
 
 // child menu
@@ -666,6 +675,7 @@ background-color: rgba(245, 245, 245, 1);
 	border-bottom: 1px solid rgba(240, 240, 240, 1);
 	cursor: pointer;
 background: #FFF;
+color: black;
 	&__item {
 		display: flex;
 		gap: 4px;
@@ -692,6 +702,7 @@ background: #FFF;
 		&-label{
 			font-size: 12px;
 			font-weight: 500;
+			margin-bottom: 0;
 		}
 	}
 
@@ -713,6 +724,7 @@ background: #FFF;
 	justify-content: left;
 	gap: 10px;
 	padding-bottom: 28px;
+	color: black;
 	
 	border-bottom: 1px solid rgba(240, 240, 240, 1);;
 	&__item{
@@ -729,6 +741,7 @@ background: #FFF;
 		&-label{
 				font-size: 12px;
 				font-weight: 500;
+				margin-bottom: 0;
 			}
 	}
 }
@@ -737,6 +750,7 @@ background: #FFF;
 	justify-content: left;
 	gap: 10px;
 	padding-bottom: 28px;
+	color: black;
 	// border-bottom: 1px solid rgba(240, 240, 240, 1);
 &__item{
 	border: 1px solid rgba(240, 240, 240, 1);
