--- a/public/sass/demo/_demo-home.scss
+++ b/public/sass/demo/_demo-home.scss
@@ -1582,6 +1582,10 @@ hr {
 .custom-responsive-banner3{
 display: none;
 }
+
+.custom-web-banner2{
+    padding-right: 20px;
+}
 // 3. Responsive
 @media(min-width: 768px) {
     .deal-products-section {
