--- a/public/sass/demo/_demo-base.scss
+++ b/public/sass/demo/_demo-base.scss
@@ -941,18 +941,46 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 86px;
+        height: 120px;
     border-bottom: 1px solid #EEE;
-    margin-bottom: 28px;
-    padding-top: 28px
+    margin-bottom: 50px;
+    padding-top: 55px
     }
 }
 
+.customdeal-border{
+    border: 1px solid rgba(185, 185, 185, 1);
+    border-right:none;
+    
+}
+.customdeal-border:nth-child(-n+3) {
+    border-bottom: none; /* Remove border-bottom for first 3 items */
+  }
+.customdeal-border:nth-child(3n+3) {
+    border-right: 1px solid rgba(185, 185, 185, 1);
+  }
 .live-search-list {
     left: 0;
     right: 0;
 }
 
+
+.custom-topbrandcontainer{
+    display: flex;
+    gap: 56px;
+    overflow: hidden;
+    max-width: 1250px;
+    justify-content: center;
+}
+.custom-top-prevbutton{
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    background-color: #F8F8F8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 // 2. Footer
 // 2.1) Footer Base
 .footer {
