--- a/public/sass/base/header/_menu.scss
+++ b/public/sass/base/header/_menu.scss
@@ -674,7 +674,7 @@ background-color: rgba(245, 245, 245, 1);
 	padding-bottom: 28px;
 	border-bottom: 1px solid rgba(240, 240, 240, 1);
 	cursor: pointer;
-background: #FFF;
+background: #F9F9F9;
 color: black;
 	&__item {
 		display: flex;
