--- a/public/sass/pages/product-pages/_product-page.scss
+++ b/public/sass/pages/product-pages/_product-page.scss
@@ -772,10 +772,11 @@ main .sticky-header {
 		}
 
 		&.active a {
-			border-color: $primary-color;
+			border-color: #222529;;
 			outline: none;
 			color: #fff;
-			background-color: $primary-color;
+		
+			background-color: #222529;;
 			// color: #21293c;
 
 			&.filter-color:before {
