--- a/public/sass/pages/product-pages/_product-page-center.scss
+++ b/public/sass/pages/product-pages/_product-page-center.scss
@@ -151,6 +151,7 @@
 
         .product-slider-container {
             width: calc(100% - 90px);
+            
         }
 
         .prod-thumbnail {
@@ -212,3 +213,11 @@
         right: 1.8rem;
     }
 }
+
+
+.strikethrough {
+    text-decoration: line-through;
+  }
+
+
+  
