--- a/public/sass/demo/_demo-base.scss
+++ b/public/sass/demo/_demo-base.scss
@@ -1466,6 +1466,14 @@ body {
     display: none !important
 
 }
+// .customdeal-border:nth-child(3n+3) {
+//     border-right: unset;
+//   }
+  .customdeal-border{
+    border: 1px solid;
+    // border-right:none;
+    
+}
     .deal-products-section{
         .deal-section-head{
             display: none;
@@ -1483,6 +1491,14 @@ body {
         h5 {
             margin: 0;
         }
+    }
+    .header-dropdown {
+        display: none;
+    }
+    .custom-topbrandcontainer{
+       
+        gap: 10px;
+        
     }
 }
 
