--- a/public/sass/pages/_dashboard.scss
+++ b/public/sass/pages/_dashboard.scss
@@ -19,10 +19,11 @@
 	}
 
 	.feature-box {
-		padding-top: 3.5rem;
+		// padding-top: 3.5rem;
 		margin-bottom: 2rem;
 		border: 2px solid #e7e7e7;
-
+display: flex;
+align-items: center;
 		i {
 			margin-bottom: 2.5rem;
 			color: #d3d3d4;
@@ -140,6 +141,7 @@
 
 @include mq("sm", max) {
 	.dashboard-content {
+		padding: 0 10px;
 		.feature-box h3 {
 			font-size: 1.3rem;
 		}
