--- a/public/sass/pages/_checkout.scss
+++ b/public/sass/pages/_checkout.scss
@@ -756,6 +756,14 @@ p.noproduct-msg {
 	margin-top: 6rem;
 	padding: 2px;
 }
+.radiocolor{
+	color: red;
+	background-color: red;
+}
+input[type="radio"]{
+	border-color: red;
+	background-color: red;
+}
 @media(max-width:700px){
 .shipingBox{
 	margin-bottom: 25px;
