--- a/public/sass/pages/_login.scss
+++ b/public/sass/pages/_login.scss
@@ -106,8 +106,8 @@ flex-direction: column;
 gap: 20px
 }
 .otpbox{
-    width: 60px;
-    height: 60px;
+    width: 60px !important;
+    height: 60px !important;
     text-align: center;
     font-size: 18px;
     border-color: #ECECEC;
@@ -174,7 +174,7 @@ gap: 20px
         }
         .otpbox{
             width: 45px !important;
-            height: 45px;
+            height: 45px !important;
         }
         .otpcontainer{
 margin-top: 0;
