--- a/public/sass/demo/_demo-home.scss
+++ b/public/sass/demo/_demo-home.scss
@@ -1829,6 +1829,20 @@ color:red
     .category-filter-section{
         display: none;
     }
+    .owl-carousel.nav-blackcircle .owl-nav{
+        .owl-prev{
+            left: -10px;
+        }
+        .owl-next{
+            right: -14px;
+        }
+        .owl-next,
+    .owl-prev{
+        width: 30px;
+        height: 30px;
+    }
+
+    }
 // .custom-banner4img{
 //     background-image: url("images/home/banners/applebannermob.jpg");
 
