--- a/public/sass/pages/product-pages/_product-page.scss
+++ b/public/sass/pages/product-pages/_product-page.scss
@@ -988,9 +988,9 @@ main .sticky-header {
 .prod-thumbnail {
 	display: flex;
 	display: -ms-flexbox;
-	margin: 59px 0 0;
+	// margin: 59px 0 0;
 	padding: 0 1px;
-
+margin-bottom: -119px;
 	> .owl-dot {
 		flex: 0 0 25%;
 		max-width: 25%;
@@ -1765,7 +1765,11 @@ line-height: 2.375rem;
 	}
 }
 
-
+@media (max-width: 800px){
+.product-single-details {
+	margin-top: 114px;
+}
+}
 
 @include only_for_edge() {
     .product-center-vertical .prod-thumbnail > .owl-dot:first-child {
