--- a/public/sass/pages/_wishlist.scss
+++ b/public/sass/pages/_wishlist.scss
@@ -213,7 +213,8 @@ i.wishlist-empty {
 	}
 
     .wishlist-table-container {
-		border-top: 4px solid #E30613;
+		// border-top: 4px solid #E30613;
+		border-top: 1px solid #E6E6E6;
     }
 
 	.table.table-wishlist {
