fix:design issue

--- a/public/sass/base/_header.scss
+++ b/public/sass/base/_header.scss
@@ -192,7 +192,7 @@ header {
 }
 .header-bottom {
 	padding-bottom: 0;
-	background: #F9F9F9;
+	background: white;
 	.header-center {
 		width: 100%;
 	}
