--- a/public/sass/base/header/_menu.scss
+++ b/public/sass/base/header/_menu.scss
@@ -681,7 +681,7 @@ overflow: hidden;
 	padding-bottom: 28px;
 	border-bottom: 1px solid rgba(240, 240, 240, 1);
 	cursor: pointer;
-background: #F9F9F9;
+// background: #F9F9F9;
 color: black;
 	&__item {
 		display: flex;
