--- a/public/sass/pages/product-pages/_product-page.scss
+++ b/public/sass/pages/product-pages/_product-page.scss
@@ -877,6 +877,7 @@ main .sticky-header {
 // 3.1) Gallery
 .product-single-gallery {
 	margin-bottom: 3.3rem;
+	padding-right: 40px;
 
 	.sticky-slider:not(.sticked) {
 		position: relative !important;
