--- a/public/sass/components/_affliation.scss
+++ b/public/sass/components/_affliation.scss
@@ -112,7 +112,8 @@
   cursor: pointer;
   font-size: 18px;
   color: #777;
-  padding-right: 20px;
+  // padding-right: 20px;
+  padding-right: 0px;
 }
 
 @media (max-width: 768px) {
