--- a/public/sass/base/header/_dropdowns.scss
+++ b/public/sass/base/header/_dropdowns.scss
@@ -122,6 +122,11 @@
     justify-content: center;
     font-size: 22px
 		}
+		.btn-close:hover{
+			background-color:#E30613; 
+    color: #ffffff; 
+    border-color: #E30613; 
+		}
 	}
 }
 
@@ -511,6 +516,11 @@
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
 }	
+.icon-cancel:hover{
+	background-color:#E30613; 
+    color: #ffffff; 
+    border-color: #E30613; 
+}
 
 // 5. Responsive
 
