--- a/public/sass/pages/_success.scss
+++ b/public/sass/pages/_success.scss
@@ -139,3 +139,21 @@
         
     }
 }
+
+
+.hoverbtn:hover {
+   
+    background-color:#E30613; 
+    color: #ffffff; 
+    border-color: #E30613; 
+  }
+
+  .hoverinto {
+        background-color: #ffffff;
+        color: black;
+  }
+  .hoverinto:hover{
+background-color:#E30613; 
+    color: #ffffff; 
+    border-color: #E30613; 
+  }
