--- a/public/sass/base/_footer.scss
+++ b/public/sass/base/_footer.scss
@@ -390,7 +390,9 @@ footer {
 		display: block;
 		margin-top: 47px;
 	}
-	
+	.bannerheight{
+		height: 142px;
+	}
 	.footer-sub{
 		display: flex;
 		flex-direction: column;
