--- a/public/sass/pages/_login.scss
+++ b/public/sass/pages/_login.scss
@@ -85,6 +85,10 @@
     justify-content: center;
     margin-top: 14px;   
 }
+.custom_login_space{
+    padding-top: 85px;
+    padding-left: 0;
+}
 .orcontainer{
     display: flex;
     align-items: center;
@@ -167,8 +171,18 @@ gap: 20px
         }
     }
 }
+.countrycodeinput{
+    height:5rem;
+}
 @media (max-width: 768px)
     {
+        .custom_login_space{
+            padding-top: 156px;
+           
+        }
+        .countrycodeinput{
+            height: 5.3rem;
+        }
         .custom_loginresp{
             padding: 0 25px;
         }
