--- a/public/sass/components/_skeleton.scss
+++ b/public/sass/components/_skeleton.scss
@@ -350,6 +350,12 @@
             }
         }
 
+        .product-slider-container{
+            .owl-item{
+                height: 111px;
+            }
+        }
+
     .skel-post {
         margin-bottom: 5rem;
 
