--- a/public/sass/components/_skeleton.scss
+++ b/public/sass/components/_skeleton.scss
@@ -352,7 +352,8 @@
 
         .product-slider-container{
             .owl-item{
-                height: 111px;
+                height: 100px;
+                gap: 30px;
             }
         }
 
