--- a/public/sass/demo/_demo-custom.scss
+++ b/public/sass/demo/_demo-custom.scss
@@ -154,6 +154,7 @@ span.toggle {
 // 2.2) Product Component
 // 2.2.1) Product Thumbnail
 .prod-thumbnail { 
+    margin-top: 20px;
     padding: 0 2px 0 0px;
 }
 
