--- a/public/sass/demo/_demo-base.scss
+++ b/public/sass/demo/_demo-base.scss
@@ -1504,7 +1504,7 @@ body {
             margin: 0;
         }
     }
-    .custom-countryhide .header-dropdown{
+    .header-dropdown-hide .header-dropdown{
 
         
          display: none;
