--- a/public/sass/demo/_demo-home.scss
+++ b/public/sass/demo/_demo-home.scss
@@ -284,6 +284,15 @@ hr {
     }
 }
 
+.carousel-without-bg {
+    .owl-stage {
+        margin: 1px 0;
+    }
+
+  
+
+}
+
 // 2.1) Home Slider
 .home-slider {
     // padding: 2.4rem 0 2.9rem;
