--- a/public/sass/demo/_demo-home.scss
+++ b/public/sass/demo/_demo-home.scss
@@ -1496,11 +1496,11 @@ hr {
     padding-top: 1.6rem;
 
     .section-title {
-        margin-bottom: 2.1rem;
+        margin-bottom: 0.5rem;
     }
 
     .owl-stage-outer {
-        background: #e7e7e7;
+        background: #ffffff;
     }
 
     .owl-item {
