--- a/public/sass/base/_header.scss
+++ b/public/sass/base/_header.scss
@@ -258,7 +258,8 @@ header {
 }
 .custom_userborder{
 	border-left: 1px solid #EBEBEB;
-    padding-left: 14px !important
+    padding-left: 14px !important;
+		margin-left: 14px
 }
 
 // 2. Header Elements
