--- a/public/sass/base/_header.scss
+++ b/public/sass/base/_header.scss
@@ -259,7 +259,7 @@ header {
 .custom_userborder{
 	border-left: 1px solid #EBEBEB;
     padding-left: 14px !important;
-		margin-left: 14px
+		margin-left: 14px !important;
 }
 
 // 2. Header Elements
